# notes

./: .gitignore  README.md  docker-compose.yml  nginx.conf
core/: Dockerfile  pyproject.toml  requirements.txt
core/captcha/: urls.py  views.py
core/mysite/: dev_settings.py  error_views.py  settings.py  test_settings.py  urls.py
core/notes/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
core/users/: authentication.py  models.py  permissions.py  schema.py  serializers.py  tests.py  urls.py  views.py
docs/: core_api.md
webui/: Dockerfile  package-lock.json  package.json
webui/public/: index.html  manifest.json
webui/src/: App.css  App.js  GoLogin.js  Header.js  Note.js  Notes.js  config.js
webui/src/components/: AddNote.js  Button.js  EditNote.js  Errors.js  Header.js  Input.js  Login.js  Note.js  NoteDetails.js  Notes.js  Registration.js
webui/src/styles/: App.css
